# Generador-PDF

./: .gitignore  Cargo.toml  README.md  todo.md
src/: config.rs  hash.rs  main.rs  upload_checks.rs
test/: run.sh
